--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,22 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.42'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.filtertool.Main',
+                'Implementation-Version': version
+        )
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 test {
