--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ dependencies {
 }
 
 jar {
+    compileJava.options.encoding = 'UTF-8'
     manifest {
         attributes(
                 'Main-Class': 'ru.riht.Main',
                 'Implementation-Version': version
         )
-
     }
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
